Finish the two fixes the cleanup audit caught halfway
A second audit re-ran the client probes. Three of the four earlier fixes hold:
the lesson survives opening a child screen, the counters editor reads the lesson,
and a card moved to a graveyard stays there. Two failed, and both were the same
fixes stopping short rather than new ground.

Tidy still overwrote a newer rotation. The staleness check asked whether a card
was still on the battlefield, and the plan also carried the angle the card had
when the preview was drawn - so turning a card afterwards and then applying
straightened it. The class javadoc has said all along that nothing here returns
an angle and so nothing here can straighten one; the code disagreed with its own
documentation, and the audit found the gap between them. A Spot is two
coordinates now, with no angle in it to get wrong, and the move is built with the
rotation the card has at the moment of applying. A card that has become attached
to another since the preview is skipped as well - given a spot of its own it
would be torn off its host, which is the same mistake as dragging one out of a
graveyard.

And the menu still ran off the screen. Fixing the vertical overlap by measuring
columns at the asked text size made it 792 pixels wide in a 427-pixel viewport:
one bug traded for another, with half the actions unreachable. A menu has three
sizes pulling against each other - the text the player asked for, the controls
they asked for, and the window they are in - and solving any two while ignoring
the third is how that happens.

MenuFit solves all three, in order of preference. Honour the asked text size when
it fits, because turning text up is a decision and quietly turning it back down
is not a fix. Wrap into columns when the menu is too tall, which costs no entry.
Only then shrink, uniformly and no further than needed, with the floor at the
size below which the font stops being letters. Uniformly is the part that matters
twice: it is also what stop